2002-10-11  Bill Bumgarner  <bbum@codefab.com>

	* Removed various debugging/development noise from startup.

	* Regenerated various incs in Modules/Cocoa based on new scripts.

	* Updated Examples/WebServicesTool to be compatible with Apple
	supplied Python.  Created a new main() implementation that
	transfers control to '/usr/bin/python' via execve().

	* Modules/Cocoa/scripts: Modified all scripts to use 0/1 instead
	of False/True for compatibility with Python 2.2.  Modified scripts
	that generate a table of information to emit the 'static' keyword
	at the head of the declaration.  This fixes a namespace collision
	with the Apple supplied Python.
	

2002-10-10 Ronald Oussoren <oussoren@cistron.nl>
	* Modules/objc/objc-class.m: Implemented a 'class_traverse' function
	  For some reason Python 2.2.0 crashes when we inherit tp_traverse
	  from PyTypeObject AND the ObjCClass is not fully constructed.
	* MANIFEST: Updated to current situation
	* README: Apple python now seems to work

2002-10-09 Ronald Oussoren <oussoren@cistron.nl>
	* Move Cocoa.AppKit and Cocoa.Foundation packages to AppKit
	  and Foundation
	* Some backward compatibility code for Python 2.2.0. This
	  includes disabling the GC module for now: This module interacts
	  badly with us.

2002-09-28 Ronald Oussoren <oussoren@cistron.nl>
	* objc-class.m: Actually implement the selector->python cache,
	  this significantly speeds up method dispatch (iClass is now
	  pretty snappy)

2002-09-23 Ronald Oussoren <oussoren@cistron.nl>
	* Changelog: fix my e-mail address.

	* setup.py: Check for a framework install of python on MacOS X

	* setup.py: Check for Python 2.3 or later

	* OC_PythonObject.m: Remove debug printf statements

	* class-builder.m: 
	  - Use alloca instead of malloc for small buffers
	  - Use signature string from the Python wrapper of a class, instead
	    of reading it directly from the Objective-C class: The user may
	    have specified a better signature.

 	* objc-class.m: